--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>Development</h3>
-
+          <h3>About</h3>
+	  <p>
+	  I like writing in perl every now and then so I put this together so I could access certain information within Launchpad.net via a perl bot I use.</p>
+	  <p>If you want a more full featured client and don't mind python I highly suggest using <a href="https://launchpad.net/launchpadlib">launchpadlib</a>.
+	    </p>
 <h3>Authors and Contributors</h3>
 <p>Author(@battlemidget)</p>
 
