--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Net-oauth-lp</h1>
-        <h2>Perl interface for Launchpad.net oauth 1.0a and client utilities</h2>
+        <h2>Perl interface for Launchpad.net oauth authorization and client utilities</h2>
         <a href="https://github.com/battlemidget/Net-OAuth-LP" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -34,7 +34,7 @@
 	  <p>If you want a more full featured client and don't mind python I highly suggest using <a href="https://launchpad.net/launchpadlib">launchpadlib</a>.
 	    </p>
 <h3>Authors and Contributors</h3>
-<p>Author(@battlemidget)</p>
+<p>Author: Adam Stokes <adam.stokes at ubuntu.com></p>
 
 <h3>Filing bugs</h3>
 <a href="https://github.com/battlemidget/Net-OAuth-LP/issues">Issues</a>
