--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             .tar.gz file
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/battlemidget/Net-OAuth-LP"></a> is maintained by <a href="https://github.com/battlemidget">battlemidget</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/battlemidget/Net-OAuth-LP"></a> is maintained by <a href="https://github.com/battlemidget">battleMidget</a>.</p>
         </aside>
       </div>
     </div>
