Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Net-oauth-lp : Perl interface for Launchpad.net oauth 1.0a and client utilities" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Net-oauth-lp by battlemidget</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Net-oauth-lp</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/battlemidget/Net-OAuth-LP">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/battlemidget/Net-OAuth-LP/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/battlemidget/Net-OAuth-LP/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/battlemidget/Net-OAuth-LP">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Net-oauth-lp</h1>
-          <h2 id="project_tagline">Perl interface for Launchpad.net oauth 1.0a and client utilities</h2>
+      <section>
+        <div id="title">
+          <h1>Net-oauth-lp</h1>
+          <p>Perl interface for Launchpad.net oauth 1.0a and client utilities</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/battlemidget">battlemidget</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/battlemidget/Net-OAuth-LP/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/battlemidget/Net-OAuth-LP/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <p>Net-OAuth-LP</p>
 
 <p><a href="https://travis-ci.org/battlemidget/Net-OAuth-LP"><img src="https://travis-ci.org/battlemidget/Net-OAuth-LP.png?branch=develop" alt="Build Status"></a></p>
@@ -75,17 +82,9 @@ by the Free Software Foundation; or the Artistic License.</p>
 
 <p>See <a href="http://dev.perl.org/licenses/">http://dev.perl.org/licenses/</a> for more information.</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Net-oauth-lp maintained by <a href="https://github.com/battlemidget">battlemidget</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
